# Checkers

./: .gitignore  CMakeLists.txt
Game/: Board.h  Config.h  Game.h  Hand.h  Logic.h
Models/: Move.h  Project_path.h  Response.h
